--- a/inject.css
+++ b/inject.css
@@ -7,11 +7,14 @@
   background: #166888;
   border-radius: 50%;
   margin: 0;
-  padding: 0;
+  padding: 5px;
   color: white;
   cursor: pointer;
   height: 30px;
   width: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .close-span:hover{
