--- a/inject.css
+++ b/inject.css
@@ -37,42 +37,32 @@
   background: white !important;
 }
 
-.extension-inner-div{
-  /*position: relative;*/
-  /*overflow-y: auto;*/
-  /*color: wheat;*/
-  /*height: 90%;*/
-  /*width: 100%;*/
-  /*text-align: justify;*/
-  /*font-size: 16px;*/
-}
-
-.extension-inner-div p, h1, h2 , h3, article{
-  margin-bottom: 10px;
-	/*color: wheat !important;*/
-	/*text-decoration: none !important;*/
-  /*border: none !important;*/
-}
-
 .hide{
 	display: none;
 }
 
 .para-graph{
+  margin-bottom: 5px;
   color: wheat !important;
-  font-size: 16px !important;
+  font-size: 14px !important;
+  text-align: justify;
+  text-decoration: none !important;
 }
 
 .heading2{
+  margin-bottom: 5px;
   cursor: pointer;
   color: wheat !important;
-  font-size: 28px !important;
+  font-size: 22px !important;
   margin-bottom: 15px !important;
+  text-decoration: none !important;
 }
 
 .heading3{
-  font-size: 20px !important;
+  margin-bottom: 5px;
+  font-size: 17px !important;
   color: wheat !important;
+  text-decoration: none !important;
 }
 
 
