--- a/inject.css
+++ b/inject.css
@@ -66,11 +66,11 @@
   z-index: 99999;
 }
 
-.hide{
+.qwiki-extension-hide{
   display: none;
 }
 
-.para-graph{
+.qwiki-extension-para-graph{
   margin-bottom: 5px;
   color: wheat !important;
   font-size: 14px !important;
@@ -78,7 +78,7 @@
   text-decoration: none !important;
 }
 
-.heading2{
+.qwiki-extension-heading2{
   margin-bottom: 5px;
   cursor: pointer;
   color: wheat !important;
@@ -87,7 +87,7 @@
   text-decoration: none !important;
 }
 
-.heading3{
+.qwiki-extension-heading3{
   margin-bottom: 5px;
   font-size: 17px !important;
   color: wheat !important;
